--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,16 @@
 {
     "cSpell.words": [
+        "golog",
+        "miekg",
         "nautobot",
-        "nautobotor"
-    ]
+        "nautobotor",
+        "NODATA",
+        "nxdomain",
+        "qname",
+        "qtype",
+        "Rcode",
+        "Rrtype",
+        "stretchr"
+    ],
+    "files.autoSave": "onFocusChange"
 }
