Stable A,AAAA + zones

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "golog",
+        "Infof",
         "miekg",
         "nautobot",
         "nautobotor",
+        "nautoboturl",
         "NODATA",
         "nxdomain",
         "qname",
