Add PTR records

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Debugf",
         "golog",
         "Infof",
         "miekg",
@@ -8,6 +9,7 @@
         "nautoboturl",
         "NODATA",
         "nxdomain",
+        "PTRNS",
         "qname",
         "qtype",
         "Rcode",
